Fix scrollbars

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -75,12 +75,12 @@ border-box-html()
     margin-bottom: 3rem
 
   .event-desc
-    overflow: scroll
+    overflow: auto
     img
       max-width: 100%
 
   .event-dates
-    overflow: scroll
+    overflow: auto
     text-align: center
     +below('s')
       text-align: left
@@ -94,7 +94,7 @@ border-box-html()
         margin: 0 1rem
 
   .event-map
-    overflow: scroll
+    overflow: auto
     height: 200px
     border: 0
     +below('s')
@@ -104,7 +104,7 @@ border-box-html()
     margin-bottom: 1rem
 
   .event-metadata
-    overflow: scroll
+    overflow: auto
     margin-bottom: 4rem
     +below('s')
       margin-bottom: 3rem
